  "let" in Programs).
- Program CoFixpoint is accepted, Program Fixpoint uses the new way to infer 
  which argument decreases structurally.
- Program Lemma, Axiom etc... now permit to have obligations in the statement iff 
  they can be automatically solved by the default tactic.
- New command "Preterm [ of id ]" to see the actual term fed to Coq for
  debugging purposes.
  
Miscellaneous

- Syntax of "Test Printing Let ref" and "Test Printing If ref" changed into
  "Test Printing Let for ref" and "Test Printing If for ref".
- Added the possibility to choose the location of tabs in coqide:
  (in Edit->Preferences->Misc)
- New commands "Set Whelp Server" and "Set Whelp Getter" to customize the
  Whelp search tool.
- An overhauled build system (new Makefiles); see dev/doc/build-system.txt

Changes from V8.1gamma to V8.1
==============================

Bug fixes

- Many bugs have been fixed (cf coq-bugs web page)

Tactics

- New tactics ring, ring_simplify and new tactic field now able to manage
  power to a positive integer constant. Tactic ring on Z and R, and
  field on R manage power (may lead to incompatibilities with V8.1gamma).
- Tactic field_simplify now applicable in hypotheses.
- New field_simplify_eq for simplifying field equations into ring equations.
- Tactics ring, ring_simplify, field, field_simplify and field_simplify_eq 
  all able to apply user-given equations to rewrite monoms on the fly 
  (see documentation).

Libraries

- New file ConstructiveEpsilon.v defining an epsilon operator and
  proving the axiom of choice constructively for a countable domain
  and a decidable predicate.

Changes from V8.1beta to V8.1gamma
==================================

Syntax

- changed parsing precedence of let/in and fun constructions of Ltac:
  let x := t in e1; e2 is now parsed as let x := t in (e1;e2).

Language and commands

- Added sort-polymorphism for definitions in Type.
- Support for implicit arguments in the types of parameters in